# cuboard

./: Cargo.toml  README.md  test.txt
src/: algorithm.rs  cli.rs  console.rs  cube.rs  cuboard.rs  main.rs  train.rs
src/bluetooth/: gancubev2.rs  mod.rs
src/view/: mod.rs  virtualcube.rs  virtualcuboard.rs  window.rs
