[package]
name = "cuboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
uuid = "1.2.2"
btleplug = "0.10"
thiserror = "1.0"
futures = "0.3.25"
tokio = { version = "1.24.2", features = ["full"] }
strum = "0.25.0"
strum_macros = "0.25.1"
try-block = "0.1.0"
defer = "0.1.0"
termios = "0.3.3"
